# lolaaur

./: CONTRIBUTING.md  README.md  pyproject.toml
lolaaur/: install.sh  lolacli.py
tests/: test_lola.py
