[tool.poetry]
name = "lolaaur"
version = "0.1.2"
description = "A simple cli tool to help beginners install apps in Linux"
authors = ["Arghya Sarkar <arghyasarkar.joker@gmail.com>"]
license="MIT"
readme="README.md"
homepage= "https://github.com/arghyagod-coder/lolaaur"
repository = "https://github.com/arghyagod-coder/lolaaur"
keywords = ["lola","lola-installer","easy-installer","lola-linux", "lola-app","lola-cli", "lolaaur"]

classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Operating System :: OS Independent",
    ]


[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
lola = "lolaur.lolacli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
